--- a/catsay/Cargo.toml
+++ b/catsay/Cargo.toml
@@ -8,3 +8,4 @@ anyhow = "1.0.98"
 assert_cmd = "2.0.17"
 clap = { version = "4.2.1", features = ["derive"] }
 colored = "2.0.0"
+predicates = "3.1.3"
